# jadaq

./: .Jenkinsfile.swp  .conanfile.txt.swp  .gitignore  CAENConf.cpp  CAENConf.hpp  CMakeLists.txt  CONTRIBUTING.md  Configuration.cpp  Configuration.hpp  DPPQCDEvent.cpp  DPPQCDEvent.hpp  DPPQDCEvent.cpp  DataFormat.hpp  DataHandler.cpp  DataHandler.hpp  DataHandlerHDF5.cpp  DataHandlerHDF5.hpp  DataHandlerNetworkSend.cpp  DataHandlerNetworkSend.hpp  DataHandlerNull.hpp  DataHandlerText.cpp  DataHandlerText.hpp  DataWriter.hpp  DataWriterHDF5.hpp  DataWriterNetwork.hpp  DataWriterNull.hpp  DataWriterText.hpp  Digitizer.cpp  Digitizer.hpp  Doxyfile  Easy.hpp  EventAccessor.hpp  EventIterator.hpp  FileID.hpp  FunctionID.cpp  FunctionID.hpp  Jenkinsfile  NetworkReceive.cpp  NetworkReceive.hpp  README.md  (+35 more)
caenlib/include/: CAENDigitizer.h  CAENDigitizerType.h
caenlib/lib/: libCAENDigitizer.so.2.11.0
cmake/: FindCAEN.cmake
config/: CAEN-MB18-6D-CREMAT.ini  CAEN-MB18-6D-lowTh.ini  CAEN-MB18-6D-traces-CREMAT.ini  CAEN-MB18-6D.ini  CAEN-MB18-7D.ini  CAEN-MB18-traces.ini  TEST_STF_27_August_2.ini  config1_STF.ini  config2_STF.ini  config2digit_STF_FP2307.ini  config_caen1751.ini  config_caen1751_pulsegen.ini  system_setup.sh  test-20180523-1420.ini  test-V1740D-20180201-1059.ini  test-V1740D-20180321-1059.ini  test-V1740D-20180321-1142.ini  test-V1740D-20180502-1129.ini  test-V1740D-20180502-1445.ini  test-minimal.ini  test-nulldigitizer.ini  test-register.ini
documentation/: README.md  debug.md  install.md  running.md
jenkins/: cloc2sloccount.xsl
libcaen/include/: CAENDigitizer.h  CAENDigitizerType.h
libcaen/lib/: ._libCAENVME.so.2.50  libCAENDigitizer.so.2.13.1
scripts/: hdf5dump.py  hdf5monitor.py  list-missing-wrapper-functions.sh  runscript  runscript.sh  runscript.sh.bk  watchme.sh
src/: Configuration.cpp  DataFormat.hpp  DataWriter.hpp  DataWriterHDF5.hpp  DataWriterNetwork.hpp  DataWriterText.hpp  Digitizer.cpp  EventIterator.hpp  StringConversion.cpp  StringConversion.hpp  Waveform.hpp  caenError.hpp  container.hpp  jadaq.cpp  runno.cpp  runno.hpp
